# command_surfer

./: Cargo.toml  README.md  package.json
.github/workflows/: release.yml  rust_workflow.yml
src/: lib.rs  main.rs
tests/: test.rs
