[package]
name = "node_script_list"
version = "0.1.0"
edition = "2021"
authors = ["CruelEngine"]
description = "A Simple cli application to read package.json in the root of a node project and list the script for user's consumption"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-deb = "2.2.0"
pancurses = { version = "0.17.0", features = ["win32"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

[dev-dependencies]
tempfile = "3.20.0"
